# skillset

./: .gitignore  README.md  pyproject.toml
.claude/skills/: public-github  python-project  tasks-py  zaira
skillset/: __init__.py  __main__.py  builtins.py  cli.py
