[project]
name = "skillset"
version = "0.1.0"
description = "Manage AI skills and permissions across different projects"
requires-python = ">=3.11"
dependencies = [
    "click",
    "toml",
]

[project.scripts]
skillset = "skillset.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
